--- a/views/preview.ejs
+++ b/views/preview.ejs
@@ -23,8 +23,10 @@
         <div class="row">
           <div class="span5">
             <div id="message-card"
-                 style="background-image: url(/images/message-cards/<%= location%>.png)">
-              <pre id="message"><%- message %></pre>
+                 style="background-image: url(/images/message-cards/<%= location%>.jpg)">
+              <pre class="message" id="message1"><%- message1 %></pre>
+              <pre class="message" id="message2"><%- message2 %></pre>
+              <pre class="message" id="message3"><%- message3 %></pre>
               <p id="name">
                 <%= name %>
               </p>
