--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -70,7 +70,7 @@ body {
             font-size: 12px;
             font-family: @sansFontFamily;
         }
-        #message {
+        .message {
             font-family: @sansFontFamily;
             padding: 0;
             margin: 0;
@@ -79,11 +79,21 @@ body {
             font-weight: normal;
             text-shadow: 0px 1px 0px rgba(255.0, 255.0, 255.0, 0.5);
             width: 230px;
-            left: 25px;
             position: absolute;
-            top: 50px;
             border: none;
             background-color: transparent;
+        }
+        #message1 {
+            left: 25px;
+            top: 50px;
+        }
+        #message2 {
+            left: 25px;
+            top: 150px;
+        }
+        #message3 {
+            left: 25px;
+            top: 250px;
         }
     }
     #submit-form {
