updating grouppo url

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,7 @@
           <p class="note">
             この企画はファンの有志で行なっています。
             企画グループは以下のグルっぽになります。
-            <a target="_blank" href="http://group.ameba.jp/group/k3W6a5atBi2q/">ひめキュン2013春ツアーファイナル企画</a>
+            <a target="_blank" href="http://group.ameba.jp/group/iwx1kMWYcEZe/">ひめキュンツアー企画 2013-2014</a>
           </p>
         </div>
         <div class="description" id="howto">
