fixing the position of the strings

--- a/views/preview.ejs
+++ b/views/preview.ejs
@@ -35,7 +35,9 @@
           <div class="span7">
             <form id="submit-form" method="post" action="/register">
               <input type="hidden" name="name" value="<%- name %>" />
-              <input type="hidden" name="message" value="<%- message %>" />
+              <input type="hidden" name="message1" value="<%- message1 %>" />
+              <input type="hidden" name="message2" value="<%- message2 %>" />
+              <input type="hidden" name="message3" value="<%- message3 %>" />
               <input type="hidden" name="location" value="<%- location %>" />
               <input type="submit" class="btn btn-primary" value="この内容で登録"/>
             </form>
