--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
             <div class="description" id="vision">
               <h3>趣旨</h3>
               <p>
-                ひめキュンフルーツ缶2013-2014冬ツアーYour Future Is Our Hope!!は広島に始まり梅田まで全国14箇所の
+                ひめキュンフルーツ缶2013-2014冬ツアーYour Future Is Our Hope!!は全国18箇所の
                 ライブハウスで行われます。
               </p>
               <p>
