--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
                 <textarea class="span8" name="message1" id="message1"><%- message1 %></textarea>
               </div>
               <div class="row-fluid">
-                <label class="span4" for="message2">講演で一番印象に残った曲、またはシーンを教えて下さい</label>
+                <label class="span4" for="message2">公演で一番印象に残った曲、またはシーンを教えて下さい</label>
                 <textarea class="span8" name="message2" id="message2"><%- message2 %></textarea>
               </div>
               <div class="row-fluid">
